--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IMT – Mohammad Kaosain Akbar</title>
+  <title>Mohammad Kaosain Akbar</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -36,14 +36,14 @@
 </head>
 <body>
 
-  <h1>PhD Interview Resources at IMT Atlantique</h1>
+  <h1>PhD Chat with Professor Lili Wei, McGill University</h1>
   <p><strong>Prepared by:</strong> Mohammad Kaosain Akbar</p>
   <p><strong>Google Scholar :</strong> <a href="https://scholar.google.ca/citations?user=5u04yDMAAAAJ&hl=en&oi=ao" target="_blank">Link</a></p>
 
   <div class="section">
-    <h2>🎓 PhD Circular of IMT</h2>
+    <h2>🎓 PhD Deadlines at ECE Department, McGill University</h2>
     <ul>
-      <li><a href="Phd offer.pdf" target="_blank">PhD Posting (PDF)</a></li>
+      <li><a href="https://www.mcgill.ca/ece/graduate/graduate/deadlines" target="_blank">Admission Deadlines (Graduate Studies)</a></li>
     </ul>
   </div>
   
@@ -63,31 +63,5 @@
     </ul>
   </div>
   
-  
-  <div class="section">
-    <h2>📚 Provided References</h2>
-    <ul>
-      <li><a href="refs/p1.pdf" target="_blank">HARMONI Paper</a></li>
-      <li><a href="refs/p2.pdf" target="_blank">SELF-CARE Paper</a></li>
-      <li><a href="refs/p3.pdf" target="_blank">Data Acquisition & Curation Paper</a></li>
-      <li><a href="refs/p4.pdf" target="_blank">RWD Curation Paper</a></li>
-    </ul>
-  </div>
-
-    <div class="section">
-    <h2>📖 Additional References Studied</h2>
-    <ul>
-      <li><a href="refs/pp1.pdf" target="_blank">Self-Adaptive Data Collection and Fusion for Health Monitoring Based on Body Sensor Networks</a></li>
-      <li><a href="refs/pp2.pdf" target="_blank">A Mobile Data Collection Platform for Mental Health Research</a></li>
-    </ul>
-  </div>
-  
-  <div class="section">
-    <h2>📝 Hand Notes</h2>
-    <ul>
-      <li><a href="notes.pdf" target="_blank">Hand Notes (PDF)</a></li>
-    </ul>
-  </div>
-
 </body>
 </html>
